[project]
name = "what-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agent>=0.1.3",
    "dotenv>=0.9.9",
    "fastapi>=0.125.0",
    "google>=3.0.0",
    "gradio>=6.1.0",
    "mcp>=1.25.0",
    "openai>=2.14.0",
    "openai-agents>=0.6.4",
    "portalocker>=3.2.0",
    "praisonaiagents[llm]>=0.1.17",
    "pydantic-ai>=1.39.0",
    "python-dotenv>=1.2.1",
    "pywin32>=311",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]
